# whitematteranalysis

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.txt  MANIFEST.in  README.md  README.txt  index.html  params.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: check_format.yaml  check_format.yml  test_package.yaml
Slicer4/TractCluster/: CMakeLists.txt  test.py
Slicer4/TractCluster/PickTracts/: CMakeLists.txt  PickTracts.py
bin-old/: image_movie.py  setup_reg_testing.py  test_objective_function.py  wm_cluster.py  wm_cluster2.py  wm_group_register_TBI.py  wm_group_register_test.py  wm_group_register_test2.py  wm_group_register_test3.py  wm_group_register_test_laterality.py  wm_group_register_test_laterality2.py  wm_group_register_test_laterality3.py  wm_group_register_test_mscale.py  wm_group_register_test_short.py  wm_laterality.py  wm_laterality_mp.py  wm_laterality_render.py  wm_laterality_stats.py  wm_laterality_stats2.py  wm_laterality_stats_3.py  wm_laterality_volumetric.py  wm_midsag_align_test.py  wm_register_test.py  wm_relative_distance_test.py  wm_render.py  wm_similarity.py  wm_super_cluster.py  wm_super_cluster2.py  wm_super_cluster3.py  wm_super_cluster_compute_clusters.py  wm_super_cluster_compute_errors.py  wm_super_cluster_setup.py  wm_test_embed_stats.py  wm_test_guassian_smooth.py  wm_test_smooth.py  wm_test_smooth_all.py  wm_test_wbstats.py
bin-test/: convert_keypoints_to_vtk.py  test_midsag_align.py  view_li.py  wm_append_all.py  wm_cluster_subject.py  wm_compare_vtks.py  wm_compute_FA_from_DWIs.py  wm_laterality_stats.py  wm_laterality_stats_pnl.py  wm_measure_all_clusters.py  wm_midsag_align.py  wm_midsag_align_all.py  wm_preprocess_all.py  wm_render_laterality_all.py  wm_rm_outliers_all.py
doc/: bundles.md  citation.md  conf.py  index.rst  installation.md  learning.md  subject-specific tractography-parcellation.md  subject-specific-tractography-parcellation.md
docs/source/: conf.py  index.rst  subject-specific-tractography-parcellation.md
slicer/: .installWMA.sh.swp  installWMA.sh
testing/: test_run.py
tests/: pstats.py  test_cluster.py  test_cluster_atlas_and_label.py  test_cluster_atlas_colors.pkl  test_cluster_atlas_embeddings.pkl  test_cluster_atlas_numbers.pkl  test_compute_objective_transx.py  test_distances.pkl  test_distances.py  test_laterality.pkl  test_laterality.py  test_outlier.pkl  test_outlier.py  test_pipeline.py  test_pipeline.sh  test_register.py  test_register.sh  test_register_faster.sh  test_tract_measurment.py  test_wm_cluster_atlas.py  test_wm_cluster_atlas.sh  test_write_mrml.py  test_write_transforms.py  view_profile_stats.py
tests/registration_tests/: test_compute_objective_function.py  test_initial_registration_step.py
tests/test_atlas_results/: atlas1.vtp  clusters_brain_0001.vtp  clusters_brain_0002.vtp
tests/test_data/: brain_0001.vtk  brain_0002.vtk
tests/test_data_measurement/: column_comma.txt  column_space.txt  column_tab.txt  demographics.xlsx  row_comma.txt  row_space.txt  row_tab.txt
tests/test_data_measurement/group_test/: 01408.txt  01409.txt  01416.txt  01421.txt  01423.txt  01424.txt
utilities/: wm_assess_cluster_location.py  wm_change_nrrd_dir.py  wm_compute_FA_from_DWIs.py  wm_compute_TAP.py  wm_compute_bundle_feature_population_math.py  wm_extract_cluster.py  wm_extract_clusters_by_endpoints.py  wm_fix_UKF_trace.py  wm_fix_hemisphere_loc_name_in_tractogram.py  wm_flatten_length_distribution.py  wm_laterality_all.py  wm_measure_all_clusters.py  wm_measure_endpoint_overlap.py  wm_query_atlas_bundles_names.py  wm_statistics.py  wm_statistics_export_data.py  wm_tract_to_volume.py  wm_transform_polydata.py
utilities/tests/: test_wm_assess_cluster_location.py  test_wm_compute_FA_DWIs.py  test_wm_compute_FA_from_DWIs.py  test_wm_compute_TAP.py  test_wm_compute_bundle_feature_population_math.py  test_wm_extract_cluster.py  test_wm_extract_clusters_by_endpoints.py  test_wm_fix_UKF_trace.py  test_wm_fix_hemisphere_loc_name_in_tractogram.py  test_wm_flatten_length_distribution.py  test_wm_laterality_all.py  test_wm_measure_all_clusters.py  test_wm_measure_endpoint_overlap.py  test_wm_query_atlas_bundle_names.py  test_wm_statistics.py  test_wm_statistics_export_data.py  test_wm_transform_polydata.py
whitematteranalysis/: __init__.py  cluster.py  cluster_bak2.py  congeal.py  congeal.pyx  congeal_multisubject.py  congeal_to_atlas.py  fibers.py  fibers.pyx  filter.py  io.py  laterality.py  mrml.py  register.py  register_two_subjects.py  register_two_subjects_nonlinear.py  register_two_subjects_nonrigid.py  register_two_subjects_nonrigid_bsplines.py  registration_functions.py  relative_distance.py  render.py  similarity.py  similarity.pyx  similarity_bak3.py  tract_measurement.py  wm_cluster_volumetric_measurements.py
whitematteranalysis/anatomy/: org_atlas_utils.py
whitematteranalysis/anatomy/tests/: test_org_atlas_utils.py
whitematteranalysis/data/atlas/: org_atlas_bundles_v1_2.csv  org_atlas_bundles_v1_3a.csv  org_atlas_version.json  utils.py
whitematteranalysis/data/atlas/tests/: test_utils.py
whitematteranalysis/fileio/: utils.py
whitematteranalysis/utils/: opt_pckg.py  tripwire.py  utils.py
whitematteranalysis/utils/tests/: test_tripwire.py
